Adding letsencrypt support

--- a/etc/nginx/chayka/php-site.conf
+++ b/etc/nginx/chayka/php-site.conf
@@ -49,3 +49,8 @@ location ~ [^/].php(/|$) {
 	fastcgi_pass unix:/var/run/php5-fpm.sock;
 	client_max_body_size 20M;
 }
+
+# location for letsencrypt webroot certificate renewal plugin
+location ~ /.well-known {
+        allow all;
+}
