--- a/etc/nginx/chayka/https.example.com.conf
+++ b/etc/nginx/chayka/https.example.com.conf
@@ -7,16 +7,17 @@ server {
     listen 443 ssl spdy;
     listen [::]:443 ipv6only=on;
 
-    ssl_certificate /var/www/example.com/certs/example.com.crt;
-    ssl_certificate_key /var/www/example.com/certs/example.com.key;
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+#   ssl_certificate /var/www/example.com/certs/fullchain.pem;
+#   ssl_certificate_key /var/www/example.com/certs/privkey.pem;
 
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout  5m;
 
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
-#    ssl_ciphers  "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
-#    ssl_prefer_server_ciphers   on;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
 
     server_name example.com www.example.com;
 
