--- a/etc/nginx/chayka/https.example.com.conf
+++ b/etc/nginx/chayka/https.example.com.conf
@@ -5,7 +5,7 @@ server {
 }
 server {
     listen 443 ssl spdy;
-    listen [::]:443 ipv6only=on;
+#   listen [::]:443 ipv6only=on;
 
     ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
