--- a/etc/nginx/chayka/php-site.conf
+++ b/etc/nginx/chayka/php-site.conf
@@ -51,7 +51,7 @@ location ~ [^/].php(/|$) {
 	include fastcgi_params;
 	fastcgi_index index.php;
 	# fastcgi_intercept_errors on;
-	fastcgi_pass unix:/var/run/php5-fpm.sock;
+	fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
 	client_max_body_size 20M;
 }
 
