install.chayka.php

--- a/etc/nginx/chayka/https.example.com.conf
+++ b/etc/nginx/chayka/https.example.com.conf
@@ -35,4 +35,8 @@ server {
 
     # Additional rules go here.
     include chayka/php-site.conf;
+
+    # Additional rules from site folder available to a user.
+	include /var/www/example.com/nginx/*.conf
+
 }
