--- a/etc/nginx/chayka/http.example.com.conf
+++ b/etc/nginx/chayka/http.example.com.conf
@@ -35,5 +35,9 @@ server {
 
 	index index.php;
 
+    # Additional rules go here.
 	include chayka/php-site.conf;
+
+    # Additional rules from site folder available to a user.
+	include /var/www/example.com/nginx/*.conf
 }
