--- a/etc/nginx/chayka/php-site.conf
+++ b/etc/nginx/chayka/php-site.conf
@@ -36,11 +36,11 @@ location / {
 
 # Directives to send expires headers and turn off 404 error logging.
 # Does not work with internal redirects
-#location ~* ^.+.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
-#	access_log off;
-#	log_not_found off;
-#	expires max;
-#}
+location ~* ^.+.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
+	access_log off;
+	log_not_found off;
+	expires max;
+}
 
 # Pass all .php files onto a php-fpm/php-fcgi server.
 location ~ [^/].php(/|$) {
