minor fix for well-known

--- a/etc/nginx/chayka/php-site.conf
+++ b/etc/nginx/chayka/php-site.conf
@@ -11,7 +11,7 @@ location = /robots.txt {
 }
 
 # location for letsencrypt webroot certificate renewal plugin
-location ~ /.well-known {
+location /.well-known {
         allow all;
 }
 
