--- a/etc/nginx/chayka/https.example.com.conf
+++ b/etc/nginx/chayka/https.example.com.conf
@@ -1,7 +1,12 @@
 server {
     listen 80;
     server_name example.com www.example.com;
-    return 301 https://example.com$request_uri;
+    location /.well-known {
+        allow all;
+    }
+    location / {
+        return 301 https://example.com$request_uri;
+    }
 }
 server {
     listen 443 ssl spdy;
