--- a/etc/nginx/chayka/https.example.com.conf
+++ b/etc/nginx/chayka/https.example.com.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name example.com www.example.com;
-    location /.well-known {
+    location ~/\.well-known {
         allow all;
     }
     location / {
