minor fix for well-known

--- a/etc/nginx/chayka/php-site.conf
+++ b/etc/nginx/chayka/php-site.conf
@@ -12,9 +12,9 @@ location = /robots.txt {
 
 # Deny all attempts to access hidden files such as .htaccess, .htpasswd, .DS_Store (Mac).
 # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
-location ~ /\. {
-	deny all;
-}
+#location ~ /\. {
+#	deny all;
+#}
 
 # location for letsencrypt webroot certificate renewal plugin
 location ~ /\.well-known {
