--- a/etc/nginx/chayka/php-site.conf
+++ b/etc/nginx/chayka/php-site.conf
@@ -12,13 +12,13 @@ location = /robots.txt {
 
 # Deny all attempts to access hidden files such as .htaccess, .htpasswd, .DS_Store (Mac).
 # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
-#location ~ /\. {
-#	deny all;
-#}
+location ~ /\.(?!well-known/) {
+	deny all;
+}
 
 # location for letsencrypt webroot certificate renewal plugin
-location ~ /\.well-known {
-        allow all;
+location ~ /\.well-known/ {
+    allow all;
 }
 
 # Deny access to any files with a .php extension in the uploads directory
