--- a/etc/nginx/chayka/http.example.com.conf
+++ b/etc/nginx/chayka/http.example.com.conf
@@ -39,5 +39,5 @@ server {
 	include chayka/php-site.conf;
 
     # Additional rules from site folder available to a user.
-	include /var/www/example.com/nginx/*.conf
+	include /var/www/example.com/nginx/*.conf;
 }
