--- a/etc/nginx/chayka/https.example.com.conf
+++ b/etc/nginx/chayka/https.example.com.conf
@@ -42,6 +42,6 @@ server {
     include chayka/php-site.conf;
 
     # Additional rules from site folder available to a user.
-	include /var/www/example.com/nginx/*.conf
+	include /var/www/example.com/nginx/*.conf;
 
 }
