--- a/etc/nginx/chayka/php-site.conf
+++ b/etc/nginx/chayka/php-site.conf
@@ -54,6 +54,8 @@ location ~ [^/].php(/|$) {
 	include fastcgi_params;
 	fastcgi_index index.php;
 	# fastcgi_intercept_errors on;
+	fastcgi_buffers 16 16k; 
+	fastcgi_buffer_size 32k;
 	fastcgi_pass unix:/var/run/php/php7.1-fpm.sock;
 }
 
